# adam_test_data

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pip-build-lint-test-coverage.yml
src/adam_test_data/: __init__.py  main.py  noise.py  observatory.py  pointings.py  populations.py
src/adam_test_data/datasets/: __init__.py  p9.py  s3m.py
src/adam_test_data/datasets/tests/: test_p9.py  test_s3m.py
src/adam_test_data/observatories/: __init__.py  observatory.py
src/adam_test_data/observatories/presets/: 695.json  V00.json  W84.json  X05.json  __init__.py  load.py
src/adam_test_data/observatories/tests/: test_observatory.py
src/adam_test_data/tests/: test_main.py  test_noise.py  test_observatory.py  test_pointings.py  test_populations.py
